--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html><!-- Write your HTML in this file -->
+<html>
+  <head>
+    <title>Well formated HTML</title>
+    </head>
+    <body></body>
+</html>
