--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hope this works</title>
+     </head>
+      <body>
+        
+      </body>
+</html>
